fix: ci resources

--- a/resources/index.src.html
+++ b/resources/index.src.html
@@ -5,15 +5,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="./app.css">
   <title>cljs + babylon + havok</title>
 </head>
 
 <body>
   <div id="info">cljs + babylon + havok</div>
   <div id="root"><canvas id="render"></canvas></div>
-  <script src="/js/lib.bundle.js"></script>
-  <script src="/js/core.js"></script>
+  <script src="./js/lib.bundle.js"></script>
+  <script src="./js/core.js"></script>
 </body>
 
 </html>
