deploy: ea2bbbb9a5e52145618c51bff63eccb2870ef7bf

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div id="info">cljs + babylon + havok</div>
   <div id="root"><canvas id="render"></canvas></div>
-  <script src="./js/lib.bundle.js"></script>
-  <script src="./js/core.js"></script>
+  <script src="./js/AB072CF8927D647A704D2ECA4E18C157.lib.bundle.js"></script>
+  <script src="./js/95AFF026E8DED25F00C84E20FD08DE20.core.js"></script>
 </body>
 
 </html>
